--- a/myapp/src/app/main/main.component.html
+++ b/myapp/src/app/main/main.component.html
@@ -35,19 +35,12 @@
     </tr>
   </table>
 </div>-->
-<div id="seattle_based_slogan">
-</div>
-<h1> Design &middot; Code &middot; Create</h1>
-<span id="banner-text">
-</span>
+<!--<span id="banner-text">-->
+<!--</span>-->
 <img id="lane_detection" src="../../assets/medias/lane_detection.gif">
-<div id="tanner_card">
-  <img src="../../assets/medias/me_standing.png">
-  <a id="portfolio" (click)="click_portfolio()"> Portfolio</a>
-</div>
-<div id="about_section">
-  <div>
-  </div>
+<h1> Design &middot; Code &middot; Create</h1>
+<!--<div id="seattle_based_slogan"></div>-->
+<div id="about">
   <h2> About </h2>
   <br>
   <p>
@@ -58,6 +51,10 @@
     Of course the startup was unsuccessful. Nevertheless, I grew and learned a ton from building the startup
     with some really passionate people. Now I'm looking for a position as a full-stack application developer.
   </p>
+</div>
+<div id="tanner_card">
+  <a id="portfolio" (click)="click_portfolio()"> Portfolio</a>
+  <img src="../../assets/medias/me_standing.png">
 </div>
 <div id="footer">
 <span id="socialmedia">
