--- a/myapp/src/app/palette.scss
+++ b/myapp/src/app/palette.scss
@@ -7,7 +7,7 @@ $opacity_inactive: .8;
 $background_uri: none;
 $seattle_green: #364a27;
 
-$cust-orange: #ffa117;
+$cust-orange: #faff3b;
 $link-font-color: $cust-orange;
 
 
