--- a/myapp/src/app/main/main.component.css
+++ b/myapp/src/app/main/main.component.css
@@ -23,176 +23,232 @@ html, body {
     -webkit-transform: translateX(30px);
     transform: translateX(30px);
     font-style: italic; } }
+app-root {
+  height: auto; }
+
 @media (orientation: landscape) {
   h1 {
-    filter: grayscale(0.1) blur(0.5px);
     color: whitesmoke;
     position: absolute;
     width: 100%;
     text-align: center;
-    opacity: .6;
+    opacity: .8;
     font-size: 4em;
     display: block;
-    top: 9%;
+    top: 12%;
     letter-spacing: 10px; }
 
-  #seattle_based_slogan {
-    filter: grayscale(0.2) blur(6px);
-    height: 20%;
-    width: auto;
-    background-image: url(../../assets/medias/seattle_skyline.png);
-    background-blend-mode: overlay;
-    background-size: 100% auto;
-    background-repeat: no-repeat;
-    background-position: 50% 70%;
-    opacity: .5; }
-
-  #banner-text {
-    height: auto;
-    text-align: center;
-    position: absolute; }
-    #banner-text h1 {
-      line-height: 80%;
-      filter: grayscale(0.5) blur(0px);
-      font-size: 12em;
-      opacity: .7; }
-
   #lane_detection {
-    height: 35%;
-    opacity: .7;
-    display: block; }
+    opacity: .9;
+    display: block;
+    border: none; }
+
+  #about {
+    background: linear-gradient(black, #5e5e5e);
+    opacity: .9;
+    width: auto;
+    height: auto; }
+    #about h2 {
+      padding-top: 5%;
+      font-size: 4em;
+      display: block;
+      width: auto;
+      color: ghostwhite;
+      margin-left: 10%; }
+    #about p {
+      overflow: auto;
+      position: relative;
+      left: 10%;
+      top: -80%;
+      padding-bottom: 20%;
+      color: ghostwhite;
+      width: 50%;
+      z-index: 3;
+      font-size: 1em; }
 
   #tanner_card {
+    background-image: url(../../assets/medias/seattle_skyline.png);
+    background-position: 0 80%;
+    background-repeat: no-repeat;
+    background-color: #e2e2e2;
+    background-size: 100% auto;
+    background-blend-mode: overlay;
     width: 100%;
-    height: 10%;
+    height: 20%;
     text-align: right;
-    color: #ffa117;
-    font-size: 3em;
-    background-color: #dcdcdc;
-    background-size: contain;
-    background-repeat: no-repeat; }
+    font-size: 2em; }
     #tanner_card img {
+      float: right;
       position: relative;
       width: auto;
-      height: 180%;
-      top: -80%;
-      right: -10%;
+      height: 150%;
+      top: -50%;
+      right: 1%;
       display: block;
-      bottom: 10%;
       z-index: 0; }
     #tanner_card #portfolio {
+      float: left;
+      color: #faff3b;
       cursor: pointer;
       display: block;
       position: relative;
       width: auto;
       height: auto;
       font-weight: bold;
-      font-size: 1em;
-      top: -150%;
-      right: 8%;
+      font-size: 1.2em;
+      top: -40%;
+      left: 10%;
       animation: move-the-object 1s infinite; }
 
-  #about_section {
-    width: 100%;
-    height: 80%;
-    background: #1d4e41 url("../../assets/medias/running.png");
-    background-size: 100% auto;
-    background-position: 40% 90%;
-    background-repeat: no-repeat; }
-    #about_section div {
-      background: linear-gradient(black, #5e5e5e);
-      opacity: .7;
-      width: auto; }
-    #about_section h2 {
-      font-size: 3em;
-      display: block;
-      width: 50%;
-      position: relative;
-      color: #ffa117;
-      opacity: .7;
-      left: 5%;
-      top: -87%; }
-    #about_section p {
-      position: relative;
-      left: 5%;
-      top: -88%;
-      padding-bottom: 20%;
-      color: white;
-      width: 45%;
-      height: auto;
-      z-index: 3;
-      font-size: .9em; }
-
   #footer {
+    clear: right;
+    position: relative;
     opacity: .8;
     width: 100%;
-    height: 6%;
-    text-align: center;
-    padding: .5%; }
+    height: auto;
+    text-align: center; }
     #footer a {
       text-decoration: none; }
       #footer a .social_icon {
-        width: auto;
-        height: 90%; }
+        width: 4%; }
     #footer p {
-      font-size: .6em; } }
-@media (orientation: portrait) {
+      font-size: .7em; } }
+@media (orientation: landscape) and (max-width: 750px) {
   h1 {
-    width: 100%;
-    text-align: center;
-    position: absolute;
-    color: whitesmoke;
-    opacity: .8;
-    font-size: 2.6em;
-    display: block;
-    top: 17%; }
+    font-size: 2em; }
 
-  #seattle_based_slogan {
-    filter: grayscale(0.2) blur(3px);
-    mix-blend-mode: #ffa117;
-    background-blend-mode: overlay;
-    opacity: .5;
-    text-align: center;
+  #about {
+    background: linear-gradient(black, #5e5e5e);
+    opacity: .9;
     width: auto;
-    height: 25%;
-    background-image: url(../../assets/medias/seattle_skyline.png);
-    background-position: 50% 100%;
-    background-repeat: no-repeat;
-    background-size: 160% 110%; }
-
-  #banner-text {
-    position: absolute;
-    text-align: center; }
-    #banner-text h1 {
-      line-height: 80%;
-      color: #ffa117;
-      font-size: 30em; }
-
-  #lane_detection {
-    height: 35%;
-    opacity: .7;
-    display: block; }
+    height: auto; }
+    #about h2 {
+      padding-top: 5%;
+      font-size: 4em;
+      display: block;
+      width: auto;
+      color: ghostwhite;
+      margin-left: 10%; }
+    #about p {
+      overflow: auto;
+      position: relative;
+      left: 10%;
+      top: -80%;
+      padding-bottom: 20%;
+      color: ghostwhite;
+      width: 80%;
+      height: auto;
+      z-index: 3;
+      font-size: 1.1em; }
 
   #tanner_card {
-    padding-top: 10px;
+    background-image: url(../../assets/medias/seattle_skyline.png);
+    background-position: 0 50%;
+    background-repeat: no-repeat;
+    background-color: #ebebeb;
+    background-size: 100% auto;
+    background-blend-mode: overlay;
     width: 100%;
-    height: 10%;
+    height: 20%;
     text-align: right;
-    color: #ffa117;
-    font-size: 2em;
-    background-color: #dcdcdc;
-    background-size: contain;
-    background-repeat: no-repeat; }
+    font-size: 2em; }
     #tanner_card img {
-      position: relative;
       width: auto;
-      height: 240%;
-      top: -140%;
-      left: 10%;
+      height: 150%;
+      top: -50%;
       display: block;
-      bottom: 10%;
       z-index: 0; }
     #tanner_card #portfolio {
+      float: left;
+      color: #faff3b;
+      cursor: pointer;
+      display: block;
+      position: relative;
+      width: auto;
+      height: auto;
+      font-weight: bold;
+      top: -40%;
+      left: 10%;
+      animation: move-the-object 1s infinite; }
+
+  #footer {
+    clear: right;
+    position: static;
+    opacity: .8;
+    width: 100%;
+    height: auto;
+    text-align: center;
+    margin-top: 2%; }
+    #footer a {
+      text-decoration: none; }
+      #footer a .social_icon {
+        width: 6%;
+        height: auto; }
+    #footer p {
+      font-size: .8em; } }
+@media (orientation: portrait) {
+  h1 {
+    z-index: 10;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    color: ghostwhite;
+    font-size: 3em;
+    display: block;
+    top: 15%; }
+
+  #lane_detection {
+    background: linear-gradient(black, #5e5e5e);
+    height: 35%;
+    opacity: .9;
+    display: block; }
+
+  #about {
+    background: linear-gradient(black, #5e5e5e);
+    opacity: .9;
+    width: auto;
+    height: auto; }
+    #about h2 {
+      padding-top: 5%;
+      font-size: 4em;
+      display: block;
+      width: auto;
+      color: ghostwhite;
+      margin-left: 10%; }
+    #about p {
+      overflow: auto;
+      position: relative;
+      left: 10%;
+      top: -80%;
+      padding-bottom: 20%;
+      color: ghostwhite;
+      width: 80%;
+      z-index: 3;
+      font-size: 1.1em; }
+
+  #tanner_card {
+    background-image: url(../../assets/medias/seattle_skyline.png);
+    background-position: 20% 100%;
+    background-repeat: no-repeat;
+    background-color: #ebebeb;
+    background-size: 140% auto;
+    background-blend-mode: overlay;
+    width: 100%;
+    height: 20%;
+    text-align: right;
+    font-size: 2em; }
+    #tanner_card img {
+      float: right;
+      position: relative;
+      width: auto;
+      height: 150%;
+      top: -50%;
+      right: 5%;
+      display: block;
+      z-index: 0; }
+    #tanner_card #portfolio {
+      float: left;
+      color: #faff3b;
       cursor: pointer;
       display: block;
       position: relative;
@@ -200,57 +256,30 @@ html, body {
       height: auto;
       font-weight: bold;
       font-size: 90%;
-      top: -300%;
-      right: 10%;
+      top: -40%;
+      left: 10%;
       animation: move-the-object 1s infinite; }
 
-  #about_section {
-    width: 100%;
-    background: white url("../../assets/medias/running.png");
-    background-position: center;
-    background-size: auto 100%;
-    background-repeat: no-repeat; }
-    #about_section div {
-      background: linear-gradient(black, #5e5e5e);
-      opacity: .7;
-      width: auto; }
-    #about_section h2 {
-      font-size: 5em;
-      display: block;
-      width: 50%;
-      position: relative;
-      color: #ffa117;
-      left: 10%;
-      top: -80%; }
-    #about_section p {
-      position: relative;
-      left: 10%;
-      top: -80%;
-      padding-bottom: 20%;
-      color: white;
-      width: 85%;
-      height: auto;
-      z-index: 3;
-      font-size: 1.1em; }
-
   #footer {
+    clear: right;
     position: static;
-    margin-top: 2%;
     opacity: .8;
     width: 100%;
     height: auto;
     text-align: center; }
     #footer a {
-      padding: .5%;
       text-decoration: none; }
       #footer a .social_icon {
         width: 8%;
         height: auto; }
     #footer p {
-      font-size: .8em; } }
+      font-size: .1em; } }
 @media (orientation: portrait) and (max-width: 750px) {
   h1 {
-    font-size: 1.5em;
-    top: 20%; } }
+    font-size: 2em;
+    top: 10%; }
+
+  #about h2 {
+    width: auto; } }
 
 /*# sourceMappingURL=main.component.css.map */
