--- a/myapp/src/app/main/main.component.scss
+++ b/myapp/src/app/main/main.component.scss
@@ -28,199 +28,257 @@
     font-style: italic;
   }
 }
-
+app-root{
+  height: auto;
+}
 @media (orientation: landscape){
   h1 {
-    filter: grayscale(.1) blur(.5px);
     color: whitesmoke;
     position: absolute;
     width: 100%;
     text-align: center;
-    opacity: .6;
+    opacity: .8;
     font-size: 4em;
     display: block;
-    top: 9%;
+    top: 12%;
     letter-spacing: 10px;
   }
-  #seattle_based_slogan{
-    filter: grayscale(.2) blur(6px);
-    height: 20%;
-    width: auto;
-    background-image: url(../../assets/medias/seattle_skyline.png);
-    background-blend-mode: overlay;
-    background-size:  100% auto;
-    background-repeat: no-repeat;
-    background-position: 50% 70%;
-    opacity: .5;
+  #lane_detection{
+    opacity: .9;
+    display: block;
+    border: none;
   }
-  #banner-text{
+  #about {
+    background: linear-gradient(black, #5e5e5e);
+    opacity: .9;
+    width: auto;
     height: auto;
-    text-align: center;
-    position: absolute;
-    //top: 5%;
-    h1 {
-      line-height: 80%;
-      filter: grayscale(.5) blur(0px);
-      font-size: 12em;
-      opacity: .7;
+    h2 {
+      padding-top: 5%;
+      font-size: 4em;
+      display: block;
+      width: auto;
+      color: ghostwhite;
+      margin-left: 10%;
+    }
+    p {
+      overflow: auto;
+      position: relative;
+      left: 10%;
+      top: -80%;
+      padding-bottom: 20%;
+      color: ghostwhite;
+      width: 50%;
+      z-index: 3;
+      font-size: 1em;
     }
   }
-  #lane_detection{
-    height: 35%;
-    opacity: .7;
-    display: block;
-  }
   #tanner_card {
-    //padding-top: 10px;
-    width: 100%;
-    height: 10%;
-    text-align: right;
-    color: $cust-orange;
-    font-size: 3em;
-    background-color: #dcdcdc;
-    background-size: contain;
+    background-image: url(../../assets/medias/seattle_skyline.png);
+    background-position: 0 80%;
     background-repeat: no-repeat;
+    background-color: #e2e2e2;
+    background-size: 100% auto;
+    background-blend-mode: overlay;
+    width: 100%;
+    height: 20%;
+    text-align: right;
+    font-size: 2em;
     img {
+      float: right;
       position: relative;
       width: auto;
-      height: 180%;
-      top: -80%;
-      right: -10%;
+      height: 150%;
+      top: -50%;
+      right: 1%;
       display: block;
-      bottom: 10%;
       z-index: 0;
     }
     #portfolio {
+      float: left;
+      color: $cust-orange;
       cursor: pointer;
       display: block;
       position: relative;
       width: auto;
       height: auto;
       font-weight: bold;
-      font-size: 1em;
-      top: -150%;
-      right: 8%;
+      font-size: 1.2em;
+      top: -40%;
+      left: 10%;
       animation: move-the-object 1s infinite;
     }
   }
-  #about_section {
-    width: 100%;
-    height: 80%;
-    background: #1d4e41 url('../../assets/medias/running.png');
-    background-size: 100% auto;
-    background-position: 40% 90%;
-    background-repeat: no-repeat;
-    div {
-      background: linear-gradient(black, #5e5e5e);
-      opacity: .7;
-      width: auto;
-    }
-    h2 {;
-      font-size: 3em;
-      display: block;
-      width: 50%;
-      position: relative;
-      color: $cust-orange;
-      opacity: .7;
-      left: 5%;
-      top: -87%;
-    }
-    p {
-      position: relative;
-      left: 5%;
-      top: -88%;
-      padding-bottom: 20%;
-      color: white;
-      width: 45%;
-      height: auto;
-      z-index: 3;
-      font-size: .9em;
-    }
-  }
   #footer{
+    clear: right;
+    position: relative;
     opacity: .8;
     width: 100%;
-    height: 6%;
+    height: auto;
     text-align: center;
-    padding: .5%;
-    // @include gradient-animation( #ffa117, #464646, 1s);
     a{
       text-decoration: none;
-      //padding: 0.5%;
       .social_icon{
-        width: auto;
-        height: 90%;
+        width: 4%;
       }
     }
     p{
-      font-size: .6em;
+      font-size: .7em;
     }
   }
-
+  @media( max-width: $breakpoint-tablet){
+    h1 {
+      font-size: 2em;
+    }
+    #about {
+      background: linear-gradient(black, #5e5e5e);
+      opacity: .9;
+      width: auto;
+      height: auto;
+      h2 {
+        padding-top: 5%;
+        font-size: 4em;
+        display: block;
+        width: auto;
+        color: ghostwhite;
+        margin-left: 10%;
+      }
+      p {
+        overflow: auto;
+        position: relative;
+        left: 10%;
+        top: -80%;
+        padding-bottom: 20%;
+        color: ghostwhite;
+        width: 80%;
+        height: auto;
+        z-index: 3;
+        font-size: 1.1em;
+      }
+    }
+    #tanner_card {
+      background-image: url(../../assets/medias/seattle_skyline.png);
+      background-position: 0 50%;
+      background-repeat: no-repeat;
+      background-color: #ebebeb;
+      background-size: 100% auto;
+    background-blend-mode: overlay;
+      width: 100%;
+      height: 20%;
+      text-align: right;
+      font-size: 2em;
+      img {
+        //float: right;
+        //position: relative;
+        width: auto;
+        height: 150%;
+        top: -50%;
+        //right: 5px;
+        display: block;
+        z-index: 0;
+      }
+      #portfolio {
+        float: left;
+        color: $cust-orange;
+        cursor: pointer;
+        display: block;
+        position: relative;
+        width: auto;
+        height: auto;
+        font-weight: bold;
+        top: -40%;
+        left: 10%;
+        animation: move-the-object 1s infinite;
+      }
+    }
+    #footer{
+      clear: right;
+      position: static;
+      opacity: .8;
+      width: 100%;
+      height: auto;
+      text-align: center;
+      margin-top: 2%;
+      a{
+        text-decoration: none;
+        .social_icon{
+          width: 6%;
+          height: auto;
+        }
+      }
+      p{
+        font-size: .8em;
+      }
+    }
+  }
 }
 
 @media (orientation: portrait){
   h1 {
+    z-index: 10;
     width: 100%;
     text-align: center;
     position: absolute;
-    color: whitesmoke;
-    opacity: .8;
-    font-size: 2.6em;
+    color: ghostwhite;
+    font-size: 3em;
     display: block;
-    top: 17%;
-  }
-  #seattle_based_slogan {
-   filter: grayscale(.2) blur(3px);
-    mix-blend-mode: $cust-orange;
-    background-blend-mode: overlay;
-    opacity: .5;
-    text-align: center;
-    width: auto;
-    height: 25%;
-    background-image: url(../../assets/medias/seattle_skyline.png);
-    background-position: 50% 100%;
-    background-repeat: no-repeat;
-    background-size: 160% 110%;
-  }
-  #banner-text{
-    position: absolute;
-    text-align: center;
-    //top: 20%;
-    h1 {
-      line-height: 80%;
-      color: $cust-orange;
-      //top: 14%;
-      font-size: 30em;
-      //opacity: .7;
-    }
+    top: 15%;
   }
   #lane_detection{
+    background: linear-gradient(black, #5e5e5e);
     height: 35%;
-    opacity: .7;
+    opacity: .9;
     display: block;
   }
+  #about {
+    background: linear-gradient(black, #5e5e5e);
+    opacity: .9;
+    width: auto;
+    height: auto;
+    h2 {
+      padding-top: 5%;
+      font-size: 4em;
+      display: block;
+      width: auto;
+      color: ghostwhite;
+      margin-left: 10%;
+    }
+    p {
+      overflow: auto;
+      position: relative;
+      left: 10%;
+      top: -80%;
+      padding-bottom: 20%;
+      color: ghostwhite;
+      width: 80%;
+      z-index: 3;
+      font-size: 1.1em;
+    }
+  }
   #tanner_card {
-    padding-top: 10px;
-    width: 100%;
-    height: 10%;
-    text-align: right;
-    color: $cust-orange;
-    font-size: 2em;
-    background-color: #dcdcdc;
-    background-size: contain;
+    background-image: url(../../assets/medias/seattle_skyline.png);
+    background-position: 20% 100%;
     background-repeat: no-repeat;
+    background-color: #ebebeb;
+    background-size: 140% auto;
+    background-blend-mode: overlay;
+    width: 100%;
+    height: 20%;
+    text-align: right;
+    font-size: 2em;
     img {
+      float: right;
       position: relative;
       width: auto;
-      height: 240%;
-      top: -140%;
-      left: 10%;
+      height: 150%;
+      top: -50%;
+      right: 5%;
       display: block;
-      bottom: 10%;
       z-index: 0;
     }
     #portfolio {
+      float: left;
+      color: $cust-orange;
       cursor: pointer;
       display: block;
       position: relative;
@@ -228,54 +286,19 @@
       height: auto;
       font-weight: bold;
       font-size: 90%;
-      top: -300%;
-      right: 10%;
+      top: -40%;
+      left: 10%;
       animation: move-the-object 1s infinite;
     }
   }
-  #about_section {
-    width: 100%;
-    background: white url('../../assets/medias/running.png');
-    background-position: center;
-    background-size: auto 100%;
-    background-repeat: no-repeat;
-    div {
-      background: linear-gradient(black, #5e5e5e);
-      opacity: .7;
-      width: auto;
-    }
-    h2 {;
-      font-size: 5em;
-      display: block;
-      width: 50%;
-      position: relative;
-      color: $cust-orange;
-      left: 10%;
-      top: -80%;
-    }
-    p {
-      position: relative;
-      left: 10%;
-      top: -80%;
-      padding-bottom: 20%;
-      color: white;
-      width: 85%;
-      height: auto;
-      z-index: 3;
-      font-size: 1.1em;
-    }
-  }
   #footer{
+    clear: right;
     position: static;
-    margin-top: 2%;
     opacity: .8;
     width: 100%;
     height: auto;
     text-align: center;
-    //margin-top: 2%;
-    // @include gradient-animation( #ffa117, #464646, 1s);
     a{
-      padding: .5%;
       text-decoration: none;
       .social_icon{
         width: 8%;
@@ -283,14 +306,18 @@
       }
     }
     p{
-      font-size: .8em;
+      font-size: .1em;
     }
   }
-
   @media (max-width: $breakpoint-tablet) {
     h1{
-      font-size: 1.5em;
-      top: 20%;
+      font-size: 2em;
+      top: 10%;
+    }
+    #about {
+      h2 {
+        width: auto;
+      }
     }
   }
 }
