--- a/myapp/src/app/blog/blog.component.scss
+++ b/myapp/src/app/blog/blog.component.scss
@@ -117,13 +117,13 @@ div#content {
     text-align: center;
   }
   #back_arrow {
+    cursor: pointer;
     position: absolute;
     top: 15%;
     left: 7%;
     font-size: 3em;
     width: auto;
     height: auto;
-    opacity: .8;
   }
   #right_side {
     width: auto;
@@ -180,14 +180,13 @@ div#content {
           display: block;
           height: 35px;
           width: auto;
-          margin-right: 2%;
+          margin-right: 10px;
         }
         .demo_btn {
           text-decoration: none;
           border-radius: 3px;
           border: solid 1px;
           background-color: #feae1c;
-          padding: 1px;
           padding-right: 3px;
           padding-left: 3px;
           font-size: 1.2em;
@@ -200,6 +199,24 @@ div#content {
           margin-right: 10px;
           margin-top: 4px;
         }
+        .notebook_btn {
+          margin-right: 10px;
+          margin-top: 4px;
+          width: auto;
+          height: auto;
+          display: block;
+          color: white;
+          background-color: white;
+          border-radius: 3px;
+          border: solid 1px;
+          float: right;
+          padding-right: 7px;
+          padding-left: 7px;
+          .notebook{
+            height: 22px;
+            width: auto;
+          }
+        }
       }
     }
     li:active , li:hover {
@@ -208,9 +225,7 @@ div#content {
   }
 }
 
-
-
-@media(orientation: landscape) {
+@media(orientation: landscape){
   #utility {
     background-color: #333333;
     cursor: default;
@@ -279,7 +294,7 @@ div#content {
         }
         .bottom_bar {
           position: relative;
-          top: 165px;
+          top: 170px;
           float: right;
           border-radius: 5px;
           display: table-footer-group;
@@ -305,53 +320,101 @@ div#content {
     }
   }
 }
-
-
-//@media(orientation: portrait) and (max-width: 900px){
-//  #utility {
-//    height: 35%;
-//    #portfolio {
-//      font-size: 5em;
-//    }
-//    #back_arrow {
-//      font-size: 2em;
-//    }
-//    #right_side {
-//      top: 22%;
-//      right: 8%;
-//      font-size: 1em;
-//    }
-//  }
-//  #content {
-//    ul {
-//      li {
-//        width: 29%;
-//        height: 160px;
-//        .card_title {
-//          text-align: center;
-//          border-radius: 2px;
-//          font-size: 1em;
-//          background-color: #333333;
-//          color: white;
-//          padding: 2%;
-//          height: 35px;
-//        }
-//        .bottom_bar {
-//          top: 80px;
-//          .github {
-//            height: 25px;
-//          }
-//          .demo_btn {
-//            color: red;
-//          }
-//        }
-//      }
-//      li:active , li:hover {
-//        background-color: #bdbdbd;
-//      }
-//    }
-//  }
-//}
+@media(orientation: landscape) and (min-width: 1000px ) {
+  #utility {
+    background-color: #333333;
+    cursor: default;
+    padding-top: 2%;
+    color: ghostwhite;
+    height: 25%;
+    width: 100%;
+    margin-bottom: 0;
+    #portfolio {
+      padding: 0;
+      padding-top: 2%;
+      font-size: 8em;
+      width: auto;
+      color: ghostwhite;
+      text-align: center;
+    }
+    #back_arrow {
+      position: absolute;
+      top: 15%;
+      left: 7%;
+      font-size: 4em;
+      width: auto;
+      height: auto;
+      opacity: .8;
+    }
+    #right_side {
+      width: auto;
+      height: auto;
+      color: ghostwhite;
+      position: absolute;
+      top: 22%;
+      right: 8%;
+      font-size: 1.2em;
+      font-weight: 800;
+      text-align: right;
+    }
+  }
+  #content {
+    ul {
+      align-items: center;
+      opacity: .9;
+      width: 100%;
+      height: auto;
+      list-style: none;
+      padding-top: 3%;
+      li {
+        margin: 2%;
+        margin-top: 1%;
+        background-color: #4b4b4b;
+        background-blend-mode: overlay;
+        -webkit-box-shadow: -5px 7px 19px 0px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: -5px 7px 19px 0px rgba(0, 0, 0, 0.75);
+        box-shadow: -5px 7px 19px 0px rgba(0, 0, 0, 0.75);
+        border-radius: 5px 5px;
+        width: 29%;
+        height: 260px;
+        float: left;
+        .card_title {
+          text-align: center;
+          border-radius: 2px;
+          font-size: 1.4em;
+          background-color: #333333;
+          color: white;
+          padding: 2%;
+          height: 35px;
+        }
+        .bottom_bar {
+          position: relative;
+          top: 160px;
+          float: right;
+          border-radius: 5px;
+          display: table-footer-group;
+          vertical-align: bottom;
+          height: auto;
+          .github {
+            float: right;
+            display: block;
+            height: 35px;
+            width: auto;
+            margin-right: 2%;
+          }
+          .demo_btn {
+            padding: 1px;
+            padding-right: 8px;
+            padding-left: 8px;
+          }
+        }
+      }
+      li:active , li:hover {
+        background-color: #bdbdbd;
+      }
+    }
+  }
+}
 
 //mobile devices
 @media( orientation: portrait) {
@@ -380,7 +443,7 @@ div#content {
           height: 20%;
         }
         .bottom_bar {
-          top: 100px;
+          top: 105px;
           .github {
             height: 25px;
           }
@@ -388,6 +451,24 @@ div#content {
             font-size: 1em;
             padding-left: 5px;
             margin-top: 2px;
+          }
+          .notebook_btn {
+            margin-right: 10px;
+            //margin-top: 4px;
+            width: auto;
+            height: auto;
+            display: block;
+            color: #feae1c;
+            background-color: white;
+            border-radius: 3px;
+            border: solid 1px;
+            float: right;
+            padding-right: 7px;
+            padding-left: 7px;
+            .notebook{
+              height: 16px;
+              width: auto;
+            }
           }
         }
       }
@@ -425,13 +506,31 @@ div#content {
           height: 18%;
         }
         .bottom_bar {
-          top: 102px;
+          top: 97px;
           .demo_btn{
-            margin-top: 0;
+            margin-top: 3px;
             padding-left: 4px;
             padding-right: 4px;
             }
+          .notebook_btn {
+            margin-right: 10px;
+            //margin-top: -1px;
+            width: auto;
+            height: auto;
+            display: block;
+            color: #feae1c;
+            background-color: white;
+            border-radius: 3px;
+            border: solid 1px;
+            float: right;
+            padding-right: 5px;
+            padding-left: 5px;
+            .notebook{
+              height: 16px;
+              width: auto;
+            }
           }
+        }
       }
     }
   }
