--- a/myapp/src/app/main/main.component.css
+++ b/myapp/src/app/main/main.component.css
@@ -87,8 +87,8 @@ html {
         margin-left: auto;
         width: 90%;
         font-family: cursive;
-        font-size: 1.5em;
-        opacity: .6; }
+        font-size: 1.8em;
+        opacity: .7; }
 
   #footer {
     bottom: 0;
@@ -214,6 +214,128 @@ html {
     }
   }
 }*/
+@media (orientation: portrait) and (min-width: 750px) {
+  h1 {
+    z-index: 10;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    color: ghostwhite;
+    font-size: 3em;
+    display: block;
+    top: 6%; }
+
+  #lane_detection {
+    height: 20%;
+    background: linear-gradient(black, #5e5e5e);
+    opacity: .8;
+    display: block; }
+
+  #tanner_card {
+    width: 100%;
+    height: 35%;
+    text-align: right;
+    background-image: url(../../assets/medias/seattle_skyline.png);
+    background-repeat: no-repeat;
+    background-color: #ebebeb;
+    background-position: 40% 50%;
+    background-size: auto 100%;
+    background-blend-mode: overlay;
+    font-size: 2em; }
+    #tanner_card img {
+      float: right;
+      position: relative;
+      width: auto;
+      height: 50%;
+      top: 50%;
+      right: 7%;
+      display: block;
+      z-index: 0; }
+    #tanner_card #portfolio_sign {
+      left: 1em;
+      bottom: -80%;
+      float: left;
+      width: auto;
+      height: auto;
+      font-size: 1em;
+      font-weight: bold;
+      color: #ff8e0c;
+      cursor: pointer;
+      display: block;
+      position: relative;
+      animation: move-the-object 1s infinite; }
+
+  #twitter_box {
+    height: 15%;
+    display: table; }
+    #twitter_box #twitter_content {
+      display: table-cell;
+      vertical-align: middle;
+      text-align: center; }
+      #twitter_box #twitter_content #content {
+        margin-right: auto;
+        margin-left: auto;
+        width: 90%;
+        font-family: cursive;
+        font-size: 2em;
+        opacity: .4; }
+
+  #footer {
+    bottom: 0;
+    width: 100%;
+    clear: right;
+    height: 25%;
+    text-align: left;
+    position: absolute;
+    background-color: #1b1b1b; }
+    #footer #socialmedia {
+      float: left;
+      width: 10%;
+      height: 100%; }
+      #footer #socialmedia .social_icon {
+        opacity: .6;
+        width: auto;
+        height: auto;
+        bottom: -1em;
+        display: block;
+        margin-left: 1em;
+        padding: .1em;
+        position: relative;
+        text-decoration: none; }
+        #footer #socialmedia .social_icon img {
+          opacity: .8;
+          width: 40px;
+          height: auto; }
+      #footer #socialmedia a.social_icon:hover {
+        opacity: 1; }
+        #footer #socialmedia a.social_icon:hover img {
+          width: 45px; }
+    #footer #menu {
+      width: 30%;
+      float: right;
+      height: auto;
+      margin-top: 2%;
+      display: block;
+      color: white; }
+      #footer #menu label {
+        font-size: 1.2em;
+        font-weight: bold; }
+      #footer #menu ul {
+        padding-left: 15%;
+        list-style: disc; }
+        #footer #menu ul li {
+          cursor: pointer;
+          padding: 7px; }
+        #footer #menu ul li:hover {
+          font-size: 1.5em;
+          padding: 3px; }
+    #footer p {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      color: white;
+      font-size: .9em;
+      text-align: center; } }
 @media (orientation: portrait) and (max-width: 750px) and (min-width: 400px) {
   h1 {
     z-index: 10;
@@ -327,128 +449,6 @@ html {
       width: 100%;
       color: white;
       font-size: .7em;
-      text-align: center; } }
-@media (orientation: portrait) and (min-width: 750px) {
-  h1 {
-    z-index: 10;
-    width: 100%;
-    text-align: center;
-    position: absolute;
-    color: ghostwhite;
-    font-size: 3em;
-    display: block;
-    top: 6%; }
-
-  #lane_detection {
-    height: 20%;
-    background: linear-gradient(black, #5e5e5e);
-    opacity: .8;
-    display: block; }
-
-  #tanner_card {
-    width: 100%;
-    height: 35%;
-    text-align: right;
-    background-image: url(../../assets/medias/seattle_skyline.png);
-    background-position: 50% 100%;
-    background-repeat: no-repeat;
-    background-color: #f5f5f5;
-    background-size: 140% auto;
-    background-blend-mode: overlay;
-    font-size: 2em; }
-    #tanner_card img {
-      float: right;
-      position: relative;
-      width: auto;
-      height: 50%;
-      top: 50%;
-      right: 7%;
-      display: block;
-      z-index: 0; }
-    #tanner_card #portfolio_sign {
-      left: 1em;
-      bottom: -80%;
-      float: left;
-      width: auto;
-      height: auto;
-      font-size: 1em;
-      font-weight: bold;
-      color: #ff8e0c;
-      cursor: pointer;
-      display: block;
-      position: relative;
-      animation: move-the-object 1s infinite; }
-
-  #twitter_box {
-    height: 15%;
-    display: table; }
-    #twitter_box #twitter_content {
-      display: table-cell;
-      vertical-align: middle;
-      text-align: center; }
-      #twitter_box #twitter_content #content {
-        margin-right: auto;
-        margin-left: auto;
-        width: 90%;
-        font-family: cursive;
-        font-size: 1.5em;
-        opacity: .4; }
-
-  #footer {
-    bottom: 0;
-    width: 100%;
-    clear: right;
-    height: auto;
-    text-align: left;
-    position: absolute;
-    background-color: #1b1b1b; }
-    #footer #socialmedia {
-      float: left;
-      width: 10%;
-      height: 90%; }
-      #footer #socialmedia .social_icon {
-        opacity: .6;
-        width: auto;
-        height: auto;
-        bottom: -1em;
-        display: block;
-        margin-left: 1em;
-        padding: .1em;
-        position: relative;
-        text-decoration: none; }
-        #footer #socialmedia .social_icon img {
-          opacity: .7;
-          width: 42px;
-          height: auto; }
-      #footer #socialmedia a.social_icon:hover {
-        opacity: 1; }
-        #footer #socialmedia a.social_icon:hover img {
-          width: 45px; }
-    #footer #menu {
-      width: 30%;
-      float: right;
-      height: auto;
-      margin-top: 2%;
-      display: block;
-      color: white; }
-      #footer #menu label {
-        font-size: 1.2em;
-        font-weight: bold; }
-      #footer #menu ul {
-        padding-left: 15%;
-        list-style: disc; }
-        #footer #menu ul li {
-          cursor: pointer;
-          padding: 7px; }
-        #footer #menu ul li:hover {
-          font-size: 1.5em;
-          padding: 3px; }
-    #footer p {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      color: white;
-      font-size: .9em;
       text-align: center; } }
 @media (orientation: portrait) and (max-width: 400px) {
   h1 {
