--- a/myapp/src/app/main/main.component.scss
+++ b/myapp/src/app/main/main.component.scss
@@ -33,6 +33,7 @@
 }
 
 
+// portrait large
 @media (orientation: landscape) {
   h1 {
     z-index: 10;
@@ -102,8 +103,8 @@
         margin-left: auto;
         width: 90%;
         font-family: cursive;
-        font-size: 1.5em;
-        opacity: .6;
+        font-size: 1.8em;
+        opacity: .7;
       }
     }
   }
@@ -246,10 +247,154 @@
     }
   }
 }*/
+// portrait large
+@media (orientation: portrait) and (min-width: $breakpoint-tablet) {
+  h1 {
+    z-index: 10;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    color: ghostwhite;
+    font-size: 3em;
+    display: block;
+    top: 6%;
+  }
 
-// iphone se
+  #lane_detection {
+    height: 20%;
+    background: linear-gradient(black, #5e5e5e);
+    opacity: .8;
+    display: block;
+  }
+
+  #tanner_card {
+    width: 100%;
+    height: 35%;
+    text-align: right;
+    background-image: url(../../assets/medias/seattle_skyline.png);
+    background-repeat: no-repeat;
+    background-color: #ebebeb;
+    background-position: 40% 50%;
+    background-size: auto 100%;
+    background-blend-mode: overlay;
+    font-size: 2em;
+    img {
+      float: right;
+      position: relative;
+      width: auto;
+      height: 50%;
+      top: 50%;
+      right: 7%;
+      display: block;
+      z-index: 0;
+    }
+    #portfolio_sign {
+      left: 1em;
+      bottom: -80%;
+      float: left;
+      width: auto;
+      height: auto;
+      font-size: 1em;
+      font-weight: bold;
+      color: $cust-orange;
+      cursor: pointer;
+      display: block;
+      position: relative;
+      animation: move-the-object 1s infinite;
+    }
+  }
+
+  #twitter_box {
+    height: 15%;
+    display: table;
+    #twitter_content {
+      display: table-cell;
+      vertical-align: middle;
+      text-align: center;
+      #content {
+        margin-right: auto;
+        margin-left: auto;
+        width: 90%;
+        font-family: cursive;
+        font-size: 2em;
+        opacity: .4;
+      }
+    }
+  }
+
+  #footer {
+    bottom: 0;
+    width: 100%;
+    clear: right;
+    height: 25%;
+    text-align: left;
+    position: absolute;
+    background-color: #1b1b1b;
+    #socialmedia {
+      float: left;
+      width: 10%;
+      height: 100%;
+      .social_icon {
+        opacity: .6;
+        width: auto;
+        height: auto;
+        bottom: -1em;
+        display: block;
+        margin-left: 1em;
+        padding: .1em;
+        position: relative;
+        text-decoration: none;
+        img {
+          opacity: .8;
+          width: 40px;
+          height: auto;
+        }
+      }
+      a.social_icon:hover {
+        opacity: 1;
+        img {
+          width: 45px;;
+        }
+      }
+    }
+    #menu {
+      width: 30%;
+      float: right;
+      height: auto;
+      margin-top: 2%;
+      display: block;
+      color: white;
+      label {
+        font-size: 1.2em;
+        font-weight: bold;
+      }
+      ul {
+        //position: relative;
+        padding-left: 15%;
+        list-style: disc;
+        li {
+          cursor: pointer;
+          padding: 7px;
+        }
+        li:hover {
+          font-size: 1.5em;
+          padding: 3px;
+        }
+      }
+    }
+    p {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      color: white;
+      font-size: .9em;
+      text-align: center;
+    }
+  }
+}
+
 // portrait mobile large
-@media (orientation: portrait) and (max-width: $breakpoint-tablet) and (min-width:"400px") {
+@media (orientation: portrait) and (max-width: $breakpoint-tablet) and (min-width:400px) {
   h1 {
     z-index: 10;
     width: 100%;
@@ -380,154 +525,8 @@
   }
 }
 
-// portrait large
-@media (orientation: portrait) and (min-width: $breakpoint-tablet) {
-  h1 {
-    z-index: 10;
-    width: 100%;
-    text-align: center;
-    position: absolute;
-    color: ghostwhite;
-    font-size: 3em;
-    display: block;
-    top: 6%;
-  }
-
-  #lane_detection {
-    height: 20%;
-    background: linear-gradient(black, #5e5e5e);
-    opacity: .8;
-    display: block;
-  }
-
-  #tanner_card {
-    width: 100%;
-    height: 35%;
-    text-align: right;
-    background-image: url(../../assets/medias/seattle_skyline.png);
-    background-position: 50% 100%;
-    background-repeat: no-repeat;
-    background-color: #f5f5f5;
-    background-size: 140% auto;
-    background-blend-mode: overlay;
-    font-size: 2em;
-    img {
-      float: right;
-      position: relative;
-      width: auto;
-      height: 50%;
-      top: 50%;
-      right: 7%;
-      display: block;
-      z-index: 0;
-    }
-    #portfolio_sign {
-      left: 1em;
-      bottom: -80%;
-      float: left;
-      width: auto;
-      height: auto;
-      font-size: 1em;
-      font-weight: bold;
-      color: $cust-orange;
-      cursor: pointer;
-      display: block;
-      position: relative;
-      animation: move-the-object 1s infinite;
-    }
-  }
-
-  #twitter_box {
-    height: 15%;
-    display: table;
-    #twitter_content {
-      display: table-cell;
-      vertical-align: middle;
-      text-align: center;
-      #content {
-        margin-right: auto;
-        margin-left: auto;
-        width: 90%;
-        font-family: cursive;
-        font-size: 1.5em;
-        opacity: .4;
-      }
-    }
-  }
-
-  #footer {
-    bottom: 0;
-    width: 100%;
-    clear: right;
-    height: auto;
-    text-align: left;
-    position: absolute;
-    background-color: #1b1b1b;
-    #socialmedia {
-      float: left;
-      width: 10%;
-      height: 90%;
-      .social_icon {
-        opacity: .6;
-        width: auto;
-        height: auto;
-        bottom: -1em;
-        display: block;
-        margin-left: 1em;
-        padding: .1em;
-        position: relative;
-        text-decoration: none;
-        img {
-          opacity: .7;
-          width: 42px;
-          height: auto;
-        }
-      }
-      a.social_icon:hover {
-        opacity: 1;
-        img {
-          width: 45px;;
-        }
-      }
-    }
-    #menu {
-      width: 30%;
-      float: right;
-      height: auto;
-      margin-top: 2%;
-      display: block;
-      color: white;
-      label {
-        font-size: 1.2em;
-        font-weight: bold;
-      }
-      ul {
-        //position: relative;
-        padding-left: 15%;
-        list-style: disc;
-        li {
-          cursor: pointer;
-          padding: 7px;
-        }
-        li:hover {
-          font-size: 1.5em;
-          padding: 3px;
-        }
-      }
-    }
-    p {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      color: white;
-      font-size: .9em;
-      text-align: center;
-    }
-  }
-}
-
-
-@media (orientation: portrait) and (max-width: '400px') {
+// iphone se
+@media (orientation: portrait) and (max-width: 400px) {
   h1 {
     z-index: 10;
     width: 100%;
@@ -659,6 +658,7 @@
     }
   }
 }
+
 // footer
 @mixin gradient-animation( $start, $end, $transTime ) {
   background-size: 100%;
